--- a/index.html
+++ b/index.html
@@ -1,20 +1,16 @@
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="css/style.css">
-</head>
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
 
-<body>
-
+  <body>
     <div class="container">
-        <h1 class="headline">Hey, i am Ibo</h1>
+      <h1 class="headline">Hey, i am Ibo, i live in Bremen, im 31</h1>
 
-        <p class="description">This is my personal website</p>
+      <p class="description">This is my personal website</p>
     </div>
-
-</body>
-
+  </body>
 </html>
